hard-gists/764262/run.log
=== Docker Run Log for 764262 ===
Started at: Mi 29. Okt 17:14:08 CET 2025

[2025-10-29 17:14:08] START: Running container for 764262
[2025-10-29 17:14:08] SUCCESS: Container 22d771d10568bd4eeefcf7149068e399fef461f9e0c06413efab5cbe2fa814a8 started for 764262
=== Container logs for 764262 ===
  File "/snippet.py", line 61
    print interval['NAME']
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 764262 ===
[2025-10-29 17:14:10] INFO: Container 22d771d10568bd4eeefcf7149068e399fef461f9e0c06413efab5cbe2fa814a8 has stopped
